--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# windows thumbnail cache
+Thumbs.db
+ehthumbs.db
+desktop.ini
+
+.vscode/
